# game-engine

./: .gitignore  .gitmodules  1.md  CMakeLists.txt  Documentation.md  Readme.md  detectCircualarDeps.py  run_debug.bat  run_release.bat  testfile
Documentation/: Basics.md
EngineAssets/: capsuleCollider.fbx  cube.fbx  sphere.fbx
Glitter/: editorMain.cpp  main.cpp  projectManger.cpp  projectMangerMain.cpp
Glitter/Headers/: Animation.hpp  Animator.hpp  AssetBrowser.hpp  Bone.hpp  Camera.h  Camera.hpp  Character.hpp  Editor.hpp  EngineRegistry.hpp  EngineState.hpp  GenericFactory.hpp  Helper.h  Helper.hpp  Input.h  Input.hpp  Level.hpp  PhysicsSystem.hpp  Prefab.hpp  ProjectManagerHandler.hpp  Registry.hpp  Shared.hpp  basicMesh.hpp  camera.hpp  cubemap.hpp  engine_common.hpp  glitter.hpp  light.hpp  material.hpp  math_3d.hpp  mesh.hpp  mesh_common.hpp  model.hpp  objectSelection.hpp  outliner.hpp  raypicking.hpp  shader.hpp  state.hpp  texture.hpp  types.hpp  useimgui.hpp  (+2 more)
Glitter/Headers/3DModel/: capsulecollider.hpp  capsulecolliderMesh.hpp  mesh.hpp  model.hpp
Glitter/Headers/3DModel/Animation/: Animation.hpp  Animator.hpp  Timewarp.hpp
Glitter/Headers/3DModel/Skeleton/: AnimData.hpp  Bone.hpp  skeleton.hpp
Glitter/Headers/AI/: AI.hpp  AiPrefab.hpp  NavMeshBuilder.hpp  Navmesh.hpp
Glitter/Headers/Camera/: Camera.hpp  FlyCam.hpp  ISpringArm.hpp  ThirdPersonCameraSpringArm.hpp
Glitter/Headers/Character/: Character.hpp  CharacterPrefabConfig.hpp
Glitter/Headers/Controls/: BlendSpace2D.hpp  ClientHandler.hpp  Controller.cpp  Controller.hpp  Empty.hpp  Input.hpp  PlayerController.hpp  statemachine.hpp
Glitter/Headers/Event/: Event.hpp  EventBus.hpp  EventQueue.hpp  InputContext.hpp
Glitter/Headers/Helpers/: AssimpHelpers.hpp  LimitedVector.hpp  Shared.hpp  Trim.hpp  cmakelist_project_template.txt  createNewProject.hpp  glitter.hpp  raypicking.hpp  shader.hpp  vertexBoneDataHelper.hpp  window3d.hpp
Glitter/Headers/Level/: Level.hpp
Glitter/Headers/Lights/: cubemap.hpp  light.hpp
Glitter/Headers/LuaEngine/: ILuaClassDef.hpp  LuaClassBuilder.hpp  LuaClassDef .hpp  LuaCondition.hpp  LuaEngine.hpp  LuaRegistry.hpp  RegisterBinding.hpp  luaStubs.hpp
Glitter/Headers/Materials/: IMaterial.hpp  Material.hpp  MaterialInstance.hpp  TextureUnits.hpp
Glitter/Headers/Modals/: 3DModelType.hpp  CameraType.hpp  FileType.hpp  LightType.hpp  material.hpp  texture.hpp  vertex.hpp
Glitter/Headers/Physics/: Box.hpp  MyContactListener.hpp  PhysicsObject.hpp  capsule.hpp
Glitter/Headers/RenderPipeline/: LightingPass.hpp  PostProcess.hpp  ShadowPass.hpp
Glitter/Headers/Renderable/: renderable.hpp
Glitter/Headers/Sprites/: text.hpp
Glitter/Headers/UI/: AI_UI.hpp  AssetBrowser.hpp  Blendspace2DUI.hpp  CharacterUI.hpp  FileExplorer.hpp  OpenFile.hpp  ProjectManager.hpp  PropertiesPanel.hpp  SMGraphEditor.hpp  SaveAs.hpp  StatemachineUI.hpp  materialManager.hpp  outliner.hpp
Glitter/Headers/UI/AlertLevels/: Error.hpp  Success.hpp  Warning.hpp
Glitter/Headers/UI/ModelPopUp/: ModelSelection.hpp
Glitter/Headers/UI/Shared/: ComboUI.hpp  EditableText.hpp  InputText.hpp  Utils.hpp
Glitter/Headers/UI/Types/: StateMachineLink.hpp  StateMachineNode.hpp
Glitter/Headers/UIState/: UIState.hpp
Glitter/Shaders/: background.frag  basic.frag  basic.vert  boneShader.frag  boneShader.vert  equirectanglular_to_cubemap.frag  irradiance_convolution.frag  pbr.frag  prefilter.frag  rayCast.frag  rayCast.vert  shader.fs  shader.vs  shadowMap.vert  staticShader.frag  staticShader.vert  textShader.frag  textShader.vert
Glitter/Shaders/PostProcessing/: PostProcess.frag  PostProcess.vert
Glitter/Shaders/debug/: debug.vert
Glitter/Shaders/pickingShader/: pickingShader.frag  pickingShader.vert
Glitter/Shaders/pointlight/: depthshader.vert
Glitter/Shaders/spotlight/: depth.frag  depth.vert
Glitter/Sources/: AI.cpp  AI_UI.cpp  Animation.cpp  Animator.cpp  AssetBrowser.cpp  BlendSpace2D.cpp  BlendSpace2DUI.cpp  Box.cpp  Camera.cpp  Character.cpp  CharacterUI.cpp  ClientHandler.cpp  ComboUI.cpp  EditableText.cpp  Editor.cpp  Empty.cpp  EngineState.cpp  FileExplorer.cpp  FlyCam.cpp  Helper.cpp  Input.cpp  InputText.cpp  Level.cpp  LightingPass.cpp  LuaRegistry.cpp  Material.cpp  MaterialInstance.cpp  ModelSelection.cpp  NavMeshBuilder.cpp  PhysicsObject.cpp  PhysicsSystem.cpp  PlayerController.cpp  PostProcess.cpp  Prefab.cpp  ProjectManager.cpp  ProjectManagerHandler.cpp  PropertiesPanel.cpp  Registry.cpp  Serializable.cpp  ShadowPass.cpp  (+33 more)
Glitter/Template/: Example.txt  cmakelist_project_template.txt  main.txt
Glitter/Template/TestGameFiles/headers/: WarriorCharacter.hpp.txt  WarriorPlayerController.hpp.txt  WarriorStatemachine.hpp.txt
Glitter/Template/TestGameFiles/sources/: WarriorCharacter.cpp.txt  WarriorPlayerController.cpp.txt  WarriorStatemachine.cpp.txt
Glitter/serializations/: Serializable.hpp  serializeAClass.hpp  serializer.hpp
Mirage/Models/: 4BarrelGunTianglulated.fbx
Mirage/Shaders/: Basic.frag  Basic.shader  Basic.vert
Res/Shader/: LightSource.shader
Tests/: CMakelists.txt  test.cpp
